--- a/Web/TP1/Tableau.html
+++ b/Web/TP1/Tableau.html
@@ -54,7 +54,10 @@
         <tr>
           <th rowspan="3">BAC +3</th>
           <td> LPRO </td>
-          <td id="miage"><a href="http://miageprojet2.unice.fr/Licence_MIAGE_3#Pr.c3.a9sentations_g.c3.a9n.c3.a9rales">Parcours Miage<img src="http://www.i3s.unice.fr/~mirbel/enseign/etoile.png" alt="étoile" width="20"></a></td>
+          <td id="miage">
+            <a href="http://miageprojet2.unice.fr/Licence_MIAGE_3#Pr.c3.a9sentations_g.c3.a9n.c3.a9rales">Parcours Miage</a>
+            <img src="http://www.i3s.unice.fr/~mirbel/enseign/etoile.png" alt="étoile" width="20">
+          </td>
           <td rowspan ="3" id="licence"> Licence Informatique </td>
         </tr>
         <tr>
