--- a/Gestion Entreprise/TP1/ex1.html
+++ b/Gestion Entreprise/TP1/ex1.html
@@ -1,16 +1,72 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
+    <head>
+      <meta charset="utf-8"/>
+      <title>Video</title>
+        <style>
+            body {
+                margin: 10px;
+                padding: 0px;
+            }
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Exemple dessin</title>
-    <link rel="stylesheet" href="ex1.css" />
-    <script src="script.js"></script>
-</head>
+            #myCanvas {
+                border: 10px solid red;
+            }
+        </style>
+        <script>
+            var video;
+            var canvas, ctx;
+            var angle = 0;
 
-<body>
-  <canvas id="myCanvas" width=500 height=500 />
-</body>
+            function init() {
+                video = document.getElementById('sourcevid');
+                canvas = document.getElementById('myCanvas');
+                ctx = canvas.getContext('2d');
 
+                setInterval("processFrame()", 25);
+            }
+
+            function processFrame() {
+
+                // Uncomment next line for drawing 100% copy of the video content
+                //ctx.drawImage(video, 0, 0);
+
+                // Comment these 4 lines if you uncommented the previous one
+                ctx.drawImage(video, 0, 0, 320, 180);
+
+                drawRotatingVideo(480, 90);
+
+                ctx.drawImage(video, 0, 180, 320, 180);
+                ctx.drawImage(video, 320, 180, 320, 180);
+            }
+
+            function drawRotatingVideo(x, y) {
+                // Clear thze zone at the top right quarter of the canvas
+                ctx.clearRect(320, 0, 320, 180);
+
+                // We are going to change the coordinate system, save the context !
+                ctx.save();
+                // translate, rotate and recenter the image at its "real" center, 
+                //not the top left corner
+                ctx.translate(x, y);
+                ctx.rotate(angle += 0.01);
+                ctx.translate(-80, -45);
+
+                ctx.drawImage(video, 0, 0, 160, 90);
+
+                // restore the context
+                ctx.restore();
+
+            }
+        </script>
+    </head>
+
+    <body onload="init()" >
+        <p>This is a &lt;video&gt; element: </p>
+        <video id="sourcevid" autoplay loop>
+            <source src="C:\Users\Jeremy\Downloads\test.mp4" type="video/mp4" />
+        </video>
+        <p>This is a &lt;canvas&gt; element: </p>
+        <canvas id="myCanvas" width="620" height="360"></canvas>
+    </body>
 </html>
