--- a/Web/TP4/index.html
+++ b/Web/TP4/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
   <head>
-    <title>Document de test</title>
+    <title>Sommaire en Javascript</title>
     <script src="./js/toc.js"></script>
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="ISO-8859-1" />
